--- a/Tutorials/Bubble/GNUmakefile
+++ b/Tutorials/Bubble/GNUmakefile
@@ -17,7 +17,7 @@ COMP        = gnu
 DEBUG       = FALSE
 USE_MPI     = FALSE 
 USE_OMP     = FALSE
-PROFILE     = FALSE
+PROFILE     = TRUE
 
 USE_CUDA = FALSE
 
