--- a/Tutorials_profiling/FlowPastCylinder/GNUmakefile
+++ b/Tutorials_profiling/FlowPastCylinder/GNUmakefile
@@ -12,13 +12,13 @@ TOP = ../..
 PRECISION   = DOUBLE
 
 # running 2d inputs files requires a 2d executable set here
-DIM         = 3
+DIM         = 2 # DIM
 COMP        = gnu
 
 DEBUG       = FALSE
 USE_MPI     = TRUE
-USE_OMP     = FALSE
-PROFILE     = FALSE
+USE_OMP     = TRUE
+PROFILE     = TRUE
 
 
 USE_VELOCITY = FALSE
