--- a/Tutorials/Bubble/GNUmakefile
+++ b/Tutorials/Bubble/GNUmakefile
@@ -14,10 +14,10 @@ PRECISION   = DOUBLE
 DIM         = 2
 COMP        = gnu
 
-DEBUG       = FALSE
-USE_MPI     = FALSE 
+DEBUG       = TRUE
+USE_MPI     = TRUE 
 USE_OMP     = FALSE
-PROFILE     = TRUE
+PROFILE     = FALSE 
 
 USE_CUDA = FALSE
 
