update the LS part

--- a/Tutorials/RayleighTaylor_LS/GNUmakefile
+++ b/Tutorials/RayleighTaylor_LS/GNUmakefile
@@ -19,7 +19,7 @@ USE_MPI     = TRUE
 USE_OMP     = FALSE
 PROFILE     = FALSE
 
-USE_CUDA = FALSE
+USE_CUDA = TRUE # FALSE
 
 USE_SENSEI_INSITU = FALSE
 
