--- a/Tutorials/RayleighTaylor_LS/GNUmakefile
+++ b/Tutorials/RayleighTaylor_LS/GNUmakefile
@@ -19,7 +19,8 @@ USE_MPI     = TRUE
 USE_OMP     = FALSE
 PROFILE     = FALSE
 
-USE_CUDA = FALSE
+USE_CUDA = TRUE # FALSE
+CUDA_ARCH = 80
 
 USE_SENSEI_INSITU = FALSE
 
