--- a/Tutorials/RayleighTaylor_LS/GNUmakefile
+++ b/Tutorials/RayleighTaylor_LS/GNUmakefile
@@ -16,10 +16,10 @@ COMP        = gnu
 
 DEBUG       = FALSE
 USE_MPI     = TRUE
-USE_OMP     = FALSE
+USE_OMP     = TRUE # FALSE
 PROFILE     = FALSE
 
-USE_CUDA = TRUE # FALSE
+USE_CUDA = FALSE
 CUDA_ARCH = 80
 
 USE_SENSEI_INSITU = FALSE
