--- a/Tutorials/RayleighTaylor_LS/GNUmakefile
+++ b/Tutorials/RayleighTaylor_LS/GNUmakefile
@@ -16,11 +16,12 @@ COMP        = gnu
 
 DEBUG       = FALSE
 USE_MPI     = TRUE
-USE_OMP     = TRUE # FALSE
+USE_OMP     = FALSE
 PROFILE     = FALSE
 
-USE_CUDA = FALSE
-CUDA_ARCH = 80
+USE_CUDA = TRUE
+#CUDA_ARCH = 80
+#CUDA_LAUNCH_BLOCK_BLOCKING=1
 
 USE_SENSEI_INSITU = FALSE
 
