update the pvf case

--- a/Tutorials/RayleighTaylor_LS/GNUmakefile
+++ b/Tutorials/RayleighTaylor_LS/GNUmakefile
@@ -19,7 +19,7 @@ USE_MPI     = TRUE
 USE_OMP     = FALSE
 PROFILE     = FALSE
 
-USE_CUDA = TRUE
+USE_CUDA = FALSE
 #CUDA_ARCH = 80
 #CUDA_LAUNCH_BLOCK_BLOCKING=1
 
