--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Dependencies
         run: |
@@ -29,8 +29,8 @@ jobs:
         if: github.event_name == 'push' && github.repository == 'AMReX-Fluids/IAMR' && github.ref == 'refs/heads/development'
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: Docs/sphinx_documentation/build/html # The folder the action should deploy.
-          TARGET_FOLDER: docs_html # The folder the action should deploy to.
-          CLEAN: false # Do not remove existing files from the deploy target.
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
+          branch: gh-pages # The branch the action should deploy to.
+          folder: Docs/sphinx_documentation/build/html # The folder the action should deploy.
+          target_folder: docs_html # The folder the action should deploy to.
+          clean: false # Do not remove existing files from the deploy target.
