--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,5 +32,5 @@ jobs:
           ssh-key: ${{ secrets.DEPLOY_KEY }}
           branch: gh-pages # The branch the action should deploy to.
           folder: Docs/sphinx_documentation/build/html # The folder the action should deploy.
-          target_folder: docs_html # The folder the action should deploy to.
+          target-folder: docs_html # The folder the action should deploy to.
           clean: false # Do not remove existing files from the deploy target.
