CI: Add codespell (#165)

--- a/Test/IAMR-tests.ini
+++ b/Test/IAMR-tests.ini
@@ -61,7 +61,7 @@ MPIhost =
 # given its own section.  
 
 [AMReX]
-# This should be a separate directoy from one you do
+# This should be a separate directory from one you do
 # day-to-day work in, to ensure that there are no conflicts
 # when the test suite does git pulls
 dir = /path/to/scratch/amrex/clone
