sync the development branch with main branch

--- a/.github/workflows/sycl.yml
+++ b/.github/workflows/sycl.yml
@@ -56,22 +56,7 @@ jobs:
 
         cd IAMR/Exec/run3d
         make -j 2 USE_SYCL=TRUE USE_CCACHE=TRUE \
-            WARN_ALL=TRUE WARN_ERROR=TRUE EXTRACXXFLAGS="-Wno-missing-braces"
+            WARN_ALL=TRUE WARN_ERROR=TRUE EXTRACXXFLAGS="-Wno-missing-braces -Wno-unused-variable -Wno-shadow"
 
         ccache -s
         du -hs ~/.cache/ccache
-
-  save_pr_number:
-    if: github.event_name == 'pull_request'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Save PR number
-        env:
-          PR_NUMBER: ${{ github.event.number }}
-        run: |
-          echo $PR_NUMBER > pr_number.txt
-      - uses: actions/upload-artifact@v4
-        with:
-          name: pr_number
-          path: pr_number.txt
-          retention-days: 1
